--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -1,18 +1,30 @@
+name: Generate and Deploy Doxygen Documentation
+
 on:
   push:
     branches:
       - master
+
 permissions:
   contents: write
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          submodules: true
+          fetch-depth: 1
+
+      - name: Set safe directory
+        run: git config --global --add safe.directory /home/runner/work/calc2-tp01/calc2-tp01
+
       - name: Create build/docs directory
         run: mkdir -p build/docs
+
       - name: Action Doxygen and GitHub Pages
         id: ghaction
         uses: AgarwalSaurav/ghaction-doxygen-ghpages@release/v2
